# qa_guru_python_3_18

./: config.py  pyproject.toml  pytest.ini
framework/: demo_qa.py
tests/: conftest.py
tests/demoshop/: test_ui.py
tests/regres/: test_api.py
tests/reqres/: test_api.py
utils/: base_session.py
