[tool.poetry]
name = "3-18"
version = "0.1.0"
description = ""
authors = ["autotester <mail@google.com>"]
readme = "README.md"
packages = [{include = "schemas"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pytest = "^7.2.1"
voluptuous = "^0.13.1"
pytest-voluptuous = "^1.2.0"
selene = "2.0.0b17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
